ajout variable couleur

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <a href="index.html"><img  alt="" src="ressources/images/logo.png" /></a>
+        <a href="">Passer au contenu</a>
         <nav>
             <a href="#">#Portrait</a>
             <a href="#">#Art</a>
@@ -23,6 +24,14 @@
     </header>
     <main>
         <h1>Nos photoographes</h1>
+        <div>
+            <img src="./ressources/images/Photographers ID Photos/MimiKeel.jpg"/>
+            <h2>Mimi Keel</h2>
+            <p>London, UK</p>
+            <p>Voir beau dans le quotidien</p>
+            <p>400€/jour</p>
+            <div><a>#portrait</a><a>#events</a><a>#travel</a><a>#animals</a></div>
+        </div>
     </main>
 
 </body>
