--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>Fisheye</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="/ressources/styles/main.css">
   <meta name="description" content="Page description"> 
 </head>
 <body>
-    <header>
-        <a href="index.html"><img  alt="" src="ressources/images/logo.png" /></a>
-        <a href="">Passer au contenu</a>
-        <nav>
-            <a href="#">#Portrait</a>
-            <a href="#">#Art</a>
-            <a href="#">#Fashion</a>
-            <a href="#">#Architecture</a>
-            <a href="#">#Travel</a>
-            <a href="#">#Sport</a>
-            <a href="#">#Animals</a>
-            <a href="#">#Events</a>
+    <header class="main-header">
+        <a href="index.html"><img class="main-header__logo" alt="" src="ressources/images/logo.png" /></a>
+        <a href="" class="anchor">Passer au contenu</a>
+        <nav class="main-header__nav">
+            <a href="#" class="filter">#Portrait</a>
+            <a href="#" class="filter">#Art</a>
+            <a href="#" class="filter">#Fashion</a>
+            <a href="#" class="filter">#Architecture</a>
+            <a href="#" class="filter">#Travel</a>
+            <a href="#" class="filter">#Sport</a>
+            <a href="#" class="filter">#Animals</a>
+            <a href="#" class="filter">#Events</a>
         </nav>
     </header>
     <main>
-        <h1>Nos photoographes</h1>
-        <div>
+        <h1 class="main-title">Nos photographes</h1>
+        <div class="card">
             <img src="./ressources/images/Photographers ID Photos/MimiKeel.jpg"/>
             <h2>Mimi Keel</h2>
             <p>London, UK</p>
