--- a/index.html
+++ b/index.html
@@ -24,15 +24,17 @@
             <a href="#" class="filter">#Events</a>
         </nav>
     </header>
-    <main>
-        <h1 class="main-title">Nos photographes</h1>
+    <main class="homepage">
+        <h1 class="homepage__title">Nos photographes</h1>
         <div class="card">
-            <img src="./ressources/images/Photographers ID Photos/MimiKeel.jpg"/>
-            <h2>Mimi Keel</h2>
-            <p>London, UK</p>
-            <p>Voir beau dans le quotidien</p>
-            <p>400€/jour</p>
-            <div><a>#portrait</a><a>#events</a><a>#travel</a><a>#animals</a></div>
+            <a>
+                <img class="card__image" src="./ressources/images/Photographers ID Photos/MimiKeel.jpg"/>
+                <h2 class="card__title">Mimi Keel</h2>
+            </a>            
+            <p class="card__location">London, UK</p>
+            <p class="card__bio">Voir beau dans le quotidien</p>
+            <p class="card__price">400€/jour</p>
+            <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
         </div>
     </main>
 
