homepage layout setup

--- a/index.html
+++ b/index.html
@@ -26,16 +26,69 @@
     </header>
     <main class="homepage">
         <h1 class="homepage__title">Nos photographes</h1>
-        <div class="card">
-            <a>
-                <img class="card__image" src="./ressources/images/Photographers ID Photos/MimiKeel.jpg"/>
-                <h2 class="card__title">Mimi Keel</h2>
-            </a>            
-            <p class="card__location">London, UK</p>
-            <p class="card__bio">Voir beau dans le quotidien</p>
-            <p class="card__price">400€/jour</p>
-            <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+        <div class="homepage__content">
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img class="card__image" src="./ressources/images/Photographers ID Photos/MimiKeel.jpg"/>
+                    <h2 class="card__title">Mimi Keel</h2>
+                </a>            
+                <p class="card__location">London, UK</p>
+                <p class="card__bio">Voir beau dans le quotidien</p>
+                <p class="card__price">400€/jour</p>
+                <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+            </div>
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img class="card__image" src="./ressources/images/Photographers ID Photos/EllieRoseWilkens.jpg"/>
+                    <h2 class="card__title">Mimi Keel</h2>
+                </a>            
+                <p class="card__location">London, UK</p>
+                <p class="card__bio">Voir beau dans le quotidien</p>
+                <p class="card__price">400€/jour</p>
+                <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+            </div>
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img class="card__image" src="./ressources/images/Photographers ID Photos/TracyGalindo.jpg"/>
+                    <h2 class="card__title">Mimi Keel</h2>
+                </a>            
+                <p class="card__location">London, UK</p>
+                <p class="card__bio">Voir beau dans le quotidien</p>
+                <p class="card__price">400€/jour</p>
+                <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+            </div>
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img class="card__image" src="./ressources/images/Photographers ID Photos/NabeelBradford.jpg"/>
+                    <h2 class="card__title">Mimi Keel</h2>
+                </a>            
+                <p class="card__location">London, UK</p>
+                <p class="card__bio">Voir beau dans le quotidien</p>
+                <p class="card__price">400€/jour</p>
+                <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+            </div>
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img class="card__image" src="./ressources/images/Photographers ID Photos/RhodeDubois.jpg"/>
+                    <h2 class="card__title">Mimi Keel</h2>
+                </a>            
+                <p class="card__location">London, UK</p>
+                <p class="card__bio">Voir beau dans le quotidien</p>
+                <p class="card__price">400€/jour</p>
+                <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+            </div>
+            <div class="card">
+                <a href="#" class="card__link">
+                    <img class="card__image" src="./ressources/images/Photographers ID Photos/MarcelNikolic.jpg"/>
+                    <h2 class="card__title">Mimi Keel</h2>
+                </a>            
+                <p class="card__location">London, UK</p>
+                <p class="card__bio">Voir beau dans le quotidien</p>
+                <p class="card__price">400€/jour</p>
+                <div class="card__tags"><a class="filter">#portrait</a><a class="filter">#events</a><a class="filter">#travel</a><a class="filter">#animals</a></div>
+            </div>
         </div>
+       
     </main>
 
 </body>
