--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Fisheye</title>
   <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="/ressources/styles/main.css">
+  <link rel="stylesheet" href="ressources/styles/main.css">
   <meta name="description" content="Page description"> 
 </head>
 <body>
