--- a/ressources/profiles/profile.html
+++ b/ressources/profiles/profile.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="/ressources/styles/main.css">
   <script src="https://kit.fontawesome.com/42ffba49ab.js" crossorigin="anonymous"></script>
   <meta name="description" content="Page description"> 
+ 
 </head>
 <body>
     <header>
@@ -46,6 +47,22 @@
             <p>300€ / jour</p>
         </div>
     </main>
+    <section class="modal">
+        <h2 class="modal__title">Contactez-moi <br/> Mimi Keel</h2>
+        <span class="modal__close">X</span>
+        <form class="modal__form">
+            <label class="modal__form__label">Prénom</label>
+            <input type="text" class="modal__form__input"/>
+            <label class="modal__form__label">Nom</label>
+            <input type="text" class="modal__form__input"/>
+            <label class="modal__form__label">Email</label>
+            <input type="email" class="modal__form__input"/>
+            <label class="modal__form__label">Votre message</label>
+            <input type="text" class="modal__form__input"/>
+            <input type="submit" class="modal__form__submit"/>
+        </form>
 
+    </section>
+    <script src="../scripts/modal.js"></script>
 </body>
 </html>
