--- a/ressources/profiles/profile.html
+++ b/ressources/profiles/profile.html
@@ -8,8 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="/ressources/styles/main.css">
   <script src="https://kit.fontawesome.com/42ffba49ab.js" crossorigin="anonymous"></script>
-  <meta name="description" content="Page description"> 
- 
+  <meta name="description" content="Page description">  
 </head>
 <body>
     <header>
@@ -27,20 +26,17 @@
             <img src="../images/Photographers ID Photos/MimiKeel.jpg" class="card__image card__image--profile"/>
         </section>
 
-        <section id="gallery">
+        <section id="trier">
             <label for="image-filter">Trier par</label>
             <select id=image-filter class="dropdown">
                 <option value="popularity">Popularité</option>
                 <option value="date">Date</option>
                 <option value="title">Titre</option>
             </select>
-            <div class="gallery__item">
-                <img src="../images/Mimi/Animals_Rainbow.jpg" class="gallery__item__image"/>
-                <div class="gallery__item__details">
-                    <p>Arc-en-ciel</p>
-                    <p>12 <i class="fas fa-heart"></i></i></p>
-                </div>                
-            </div>
+        </section>
+        
+        <section id="gallery" class="gallery">
+            
         </section>
         <div class="sticky">
             <p>297 081 <i class="fas fa-heart"></i></i></p>
@@ -63,6 +59,7 @@
         </form>
 
     </section>
-    <script src="../scripts/modal.js"></script>
+    <script type="module" src="../scripts/modal.js"></script>
+    <script type="module" src="../scripts/profile.js"></script>
 </body>
 </html>
