--- a/ressources/profiles/profile.html
+++ b/ressources/profiles/profile.html
@@ -6,7 +6,7 @@
   <title>Fisheye</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="/ressources/styles/main.css">
+  <link rel="stylesheet" href="ressources/styles/main.css">
   <script src="https://kit.fontawesome.com/42ffba49ab.js" crossorigin="anonymous"></script>
   <meta name="description" content="Page description">  
 </head>
