--- a/profile.html
+++ b/profile.html
@@ -15,10 +15,8 @@
         <a href="index.html"><img class="main-header__logo" alt="" src="/ressources/images/logo.png" /></a>
     </header>
     <main>
-        <section id="profile" class="card--profile">
-            
+        <section id="profile" class="card--profile"> 
         </section>
-
         <section id="trier">
             <label for="image-filter">Trier par</label>
             <select id=image-filter class="dropdown">
@@ -52,7 +50,7 @@
         </form>
 
     </section>    
-    <script type="module" src="../scripts/profile.js"></script>
-    <script type="module" src="../scripts/modal.js"></script>
+    <script type="module" src="ressources/scripts/profile.js"></script>
+    <script type="module" src="ressources/scripts/modal.js"></script>
 </body>
 </html>
