profile js wrapup, mobile style adjustement

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <a href="index.html"><img class="main-header__logo" alt="" src="ressources/images/logo.png" /></a>
         <a href="" class="anchor" onclick="toTop()">Passer au contenu</a>
         <nav class="main-header__nav">
-            <a href="#portrait" class="filter">#Portrait</a>
-            <a href="#art" class="filter">#Art</a>
-            <a href="#fashion" class="filter">#Fashion</a>
-            <a href="#architecture" class="filter">#Architecture</a>
-            <a href="#travel" class="filter">#Travel</a>
-            <a href="#sport" class="filter">#Sport</a>
-            <a href="#animals" class="filter">#Animals</a>
-            <a href="#events" class="filter">#Events</a>
+            <a href="#portrait" class=" filter filter--nav">#Portrait</a>
+            <a href="#art" class="filter filter--nav">#Art</a>
+            <a href="#fashion" class="filter filter--nav">#Fashion</a>
+            <a href="#architecture" class="filter filter--nav">#Architecture</a>
+            <a href="#travel" class="filter filter--nav">#Travel</a>
+            <a href="#sport" class="filter filter--nav">#Sport</a>
+            <a href="#animals" class="filter filter--nav">#Animals</a>
+            <a href="#events" class="filter filter--nav">#Events</a>
         </nav>
     </header>
     <main class="homepage" id="main-content">
