--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,8 @@
             
         </section>
         <div class="sticky">
-            <p class="like-number">297 081 </p><i class="fas fa-heart"></i>
+            <div class="sticky__likeCount"><p class="like-number">297 081 </p><i class="fas fa-heart"></i></div>
+            
             <p>300€ / jour</p>
         </div>
     </main>
