like fix + price injection

--- a/profile.html
+++ b/profile.html
@@ -30,9 +30,8 @@
             
         </section>
         <div class="sticky">
-            <div class="sticky__likeCount"><p class="like-number">297 081 </p><i class="fas fa-heart"></i></div>
-            
-            <p>300€ / jour</p>
+            <div class="sticky__likeCount"><p class="like-number"></p><i class="fas fa-heart"></i></div>
+            <p class="sticky__tarif"></p>
         </div>
     </main>
     <section class="modal">
