anchor show/hide on focus

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <header class="main-header">
-        <a href="index.html"><img class="main-header__logo" alt="" src="ressources/images/logo.png" /></a>
-        <a href="" class="anchor" onclick="toTop()">Passer au contenu</a>
+      <a href="#main-content" class="anchor">Passer au contenu</a>
+      <a href="index.html"><img class="main-header__logo" alt="" src="ressources/images/logo.png" /></a>        
         <nav class="main-header__nav">
             <a href="#portrait" class=" filter filter--nav">#Portrait</a>
             <a href="#art" class="filter filter--nav">#Art</a>
@@ -31,6 +31,5 @@
     </main>
 <script src="./ressources/scripts/homepage.js" type="module"></script>
 <script src="./ressources/scripts/photographe.js" type="module"></script>
-<script src="./ressources/scripts/scroll.js" type="module"></script>
 </body>
 </html>
