--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="main-header">
       <a href="#main-content" class="anchor">Passer au contenu</a>
-      <a href="index.html"><img class="main-header__logo" alt="" src="ressources/images/logo.png" /></a>        
-        <nav class="main-header__nav">
+      <a href="index.html"><img class="main-header__logo" alt="Fisheye Homa Page" src="ressources/images/logo.png" /></a>        
+        <nav class="main-header__nav" alt="Tag">
             <a href="#portrait" class=" filter filter--nav">#Portrait</a>
             <a href="#art" class="filter filter--nav">#Art</a>
             <a href="#fashion" class="filter filter--nav">#Fashion</a>
