move loghtbox into own file

--- a/profile.html
+++ b/profile.html
@@ -63,5 +63,6 @@
     </section>  
     <script type="module" src="ressources/scripts/profile.js"></script>
     <script type="module" src="ressources/scripts/modal.js"></script>
+    <script type="module" src="ressources/scripts/Lightbox.js"></script>
 </body>
 </html>
