--- a/profile.html
+++ b/profile.html
@@ -37,7 +37,7 @@
     </main>
     <section class="modal" aria-labelledby="contactmeTitle">
         <h2 class="modal__title" id="contactmeTitle">Contactez-moi <br/> Mimi Keel</h2>
-        <i class="fas fa-times modal__close" alt="close contact form"></i>
+        <button class="modal__close"><i class="fas fa-times" alt="close contact form"></i></button>
         <form class="modal__form">
             <label class="modal__form__label" for="prenom" id="labelPrenom">Prénom</label>
             <input type="text" class="modal__form__input" id="prenom" aria-labelledby="labelPrenom"/>
