video keyboard selection  fix

--- a/profile.html
+++ b/profile.html
@@ -51,12 +51,12 @@
         </form>
     </section>  
     <section id="lightbox" class="lightbox" aria-label="image closeup viex">
-        <div class="lightbox__container">
-            <i class="fas fa-times fa-7x lightbox__close" alt="Close Dialog"></i>
-            <i class="fas fa-chevron-left fa-7x lightbox__button" id="lightbox__previous" alt="Previous Image"></i>
+        <div class="lightbox__container">            
+            <button class="lightbox__button" id="lightbox__previous"><i class="fas fa-chevron-left fa-7x "  alt="Previous Image"></i></button>
             <div class="lightbox__content">                
             </div>
-            <i class="fas fa-chevron-right fa-7x lightbox__button" id="lightbox__next" alt="Next Image"></i>
+            <button class="lightbox__button" id="lightbox__next"><i class="fas fa-chevron-right fa-7x"  alt="Next Image"></i></button>
+            <button class="lightbox__close"><i class="fas fa-times fa-7x" alt="Close Dialog"></i></button>
         </div>
         
     </section>  
