implementation alt-text

--- a/profile.html
+++ b/profile.html
@@ -47,7 +47,7 @@
             <input type="email" class="modal__form__input" id="mail" aria-labelledby="labelMail"/>
             <label class="modal__form__label" for="message" id="labelMessage">Votre message</label>
             <input type="text" class="modal__form__input" id="message" aria-labelledby="labelMessage"/>
-            <input type="submit" class="modal__form__submit" alt="Send"/>
+            <input type="submit" class="modal__form__submit"/>
         </form>
     </section>  
     <section id="lightbox" class="lightbox" aria-label="image closeup viex">
