--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <body>
     <header class="main-header">
       <a href="#main-content" class="anchor">Passer au contenu</a>
-      <a href="index.html"><img class="main-header__logo" alt="Fisheye Homa Page" src="ressources/images/logo.png" /></a>        
+      <a href="index.html" aria-label="Page D'accueil"><img class="main-header__logo" alt="Fisheye Homa Page" src="ressources/images/logo.png" /></a>        
         <nav class="main-header__nav" alt="Tag">
-            <a href="#portrait" class=" filter filter--nav">#Portrait</a>
-            <a href="#art" class="filter filter--nav">#Art</a>
-            <a href="#fashion" class="filter filter--nav">#Fashion</a>
-            <a href="#architecture" class="filter filter--nav">#Architecture</a>
-            <a href="#travel" class="filter filter--nav">#Travel</a>
-            <a href="#sport" class="filter filter--nav">#Sport</a>
-            <a href="#animals" class="filter filter--nav">#Animals</a>
-            <a href="#events" class="filter filter--nav">#Events</a>
+            <a href="#portrait" class=" filter filter--nav" aria-label="filtre Portrait">#Portrait</a>
+            <a href="#art" class="filter filter--nav" aria-label="filtre Art">#Art</a>
+            <a href="#fashion" class="filter filter--nav" aria-label="filtre Fashion">#Fashion</a>
+            <a href="#architecture" class="filter filter--nav" aria-label="filtre Architecture">#Architecture</a>
+            <a href="#travel" class="filter filter--nav" aria-label="filtre Travel">#Travel</a>
+            <a href="#sport" class="filter filter--nav" aria-label="filtre Sport">#Sport</a>
+            <a href="#animals" class="filter filter--nav" aria-label="filtre Animals">#Animals</a>
+            <a href="#events" class="filter filter--nav" aria-label="filtre Events">#Events</a>
         </nav>
     </header>
     <main class="homepage" id="main-content">
