--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html" aria-label="Page D'accueil"><img class="main-header__logo" alt="Fisheye Home Page" src="ressources/images/logo.png" /></a>
+        <a href="index.html"><img class="main-header__logo" alt="Fisheye Home Page" src="ressources/images/logo.png" /></a>
     </header>
     <main>
         <section id="profile" class="card--profile"> 
@@ -31,13 +31,13 @@
             
         </section>
         <div class="sticky">
-            <div class="sticky__likeCount"><p class="like-number"></p><i class="fas fa-heart"></i></div>
+            <div class="sticky__likeCount"><p class="like-number"></p><span class="fas fa-heart"></span></div>
             <p class="sticky__tarif"></p>
         </div>
     </main>
     <section class="modal" aria-labelledby="contactmeTitle">
         <h2 class="modal__title" id="contactmeTitle">Contactez-moi <br/> Mimi Keel</h2>
-        <button class="modal__close"><i class="fas fa-times" alt="close contact form" aria-label="fermer"></i></button>
+        <button class="modal__close"><span class="fas fa-times" alt="close contact form" aria-label="fermer"></span></button>
         <form class="modal__form">
             <label class="modal__form__label" for="prenom" id="labelPrenom">Prénom</label>
             <input type="text" class="modal__form__input" id="prenom" aria-labelledby="labelPrenom"/>
@@ -47,8 +47,7 @@
             <input type="email" class="modal__form__input" id="mail" aria-labelledby="labelMail"/>
             <label class="modal__form__label" for="message" id="labelMessage">Votre message</label>
             <input type="text" class="modal__form__input" id="message" aria-labelledby="labelMessage"/>
-            <label class="modal__form__label--hidden" for="message" id="labelSubmit">Envoie du Formulaire</label>
-            <input type="submit" class="modal__form__submit" id="submit" aria-labelledby="labelSubmit"/>
+            <input type="submit" class="modal__form__submit" id="submit" aria-label="Envoie du Message"/>
         </form>
     </section>  
     <section id="lightbox" class="lightbox" aria-label="image closeup viex">
