label accessibility validation

--- a/profile.html
+++ b/profile.html
@@ -47,6 +47,7 @@
             <input type="email" class="modal__form__input" id="mail" aria-labelledby="labelMail"/>
             <label class="modal__form__label" for="message" id="labelMessage">Votre message</label>
             <input type="text" class="modal__form__input" id="message" aria-labelledby="labelMessage"/>
+            <label class="modal__form__label--hidden" for="submit" id="labelMessage">Envoie du message</label>
             <input type="submit" class="modal__form__submit" id="submit" aria-label="Envoie du Message"/>
         </form>
     </section>  
